some head meta additions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bruno Odella - Estudiante de Ingeniería en Sistemas</title>
+	<meta name="description" content="Página web personal de Bruno Odella, estudiante de ingeniería en sistemas en busca de empleo.">
+    <meta name="keywords" content="Bruno Odella, ingeniería en sistemas, estudiante, búsqueda de empleo, Universidad ORT">
+    <meta name="author" content="Bruno Odella">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
