--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>BrunoOdella</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="BO.jpg">
 <style>body{font-family:Courier New,Courier,monospace;margin:0;padding:0;background-color:#fdf6e3;color:#002b36;line-height:1.6}</style><link rel="stylesheet" href="styles-O2XARKAN.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-O2XARKAN.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-DDTHTZCF.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-V6REKWKK.js" type="module"></script></body>
 </html>
